Fix clipping issue on mobile testimonial cards by increasing height

--- a/src/index.css
+++ b/src/index.css
@@ -189,8 +189,8 @@
 
 /* Infinite Testimonial Slider */
 .testimonial-slider {
-  --width: 280px;
-  --height: 300px;
+  --width: 290px;
+  --height: 360px;
   width: 100%;
   height: var(--height);
   overflow: hidden;
